[package]
name = "trafast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.1", features = ["dynamic_linking"] }
ordered-float = "3.7.0"

[profile.dev.package."*"]
opt-level = 3