[package]
name = "trafast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.1" }
ordered-float = "3.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.dev.package."*"]
opt-level = 3

[target.x86_64-pc-windows-msvc]
rustflags = ["-Ctarget-feature=+crt-static"]